-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.1
-
None
-
-
8dcb22d5e9 (qt-creator/qt-creator/9.0) 8dcb22d5e9 (qt-creator/qt-creator/master)
When I press the Home key, instead of going to the start of the visually wrapped line, the cursor goes to the start of the unwrapped line.
For Gerrit Dashboard: QTCREATORBUG-28198 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
436892,2 | Editor: fix go to line start | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |